# varserver

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: linux-simple-builds.yml
client/: CMakeLists.txt
client/inc/: var.h  varfp.h  varobject.h  varquery.h  varserver.h  vartemplate.h
client/inc/varserver/: shmapi.h  sockapi.h  var.h  varcache.h  varclient.h  varflags.h  varobject.h  varprint.h  varquery.h  varrequest.h  varserver.h  vartemplate.h
client/src/: shmapi.c  sockapi.c  varcache.c  varclient.c  varflags.c  varfp.c  varobject.c  varprint.c  varquery.c  varserver.c  vartemplate.c
client/test/: CMakeLists.txt  varobject_tests.cpp  varserver_tests.cpp
getvar/: CMakeLists.txt
getvar/src/: getvar.c
mkvar/: CMakeLists.txt
mkvar/src/: mkvar.c
server/: CMakeLists.txt
server/inc/: blocklist.h  clientlist.h  connection.h  gc.h  handlers.h  hash.h  metric.h  notify.h  server.h  shmserver.h  sockserver.h  stats.h  taglist.h  transaction.h  validate.h  varlist.h  varstorage.h
server/src/: blocklist.c  clientlist.c  connection.c  gc.c  handlers.c  hash.c  metric.c  notify.c  reference.c  server.c  shmserver.c  sockserver.c  stats.c  taglist.c  transaction.c  validate.c  varlist.c
setvar/: CMakeLists.txt
setvar/src/: setvar.c
varalias/: CMakeLists.txt
varalias/src/: varalias.c
varflags/: CMakeLists.txt
varflags/src/: varflags.c
vars/: CMakeLists.txt
vars/src/: vars.c
vartemplate/: CMakeLists.txt
vartemplate/src/: vartemplate.c
vartemplate/test/: template.txt
vartests/: CMakeLists.txt
vartests/blobtest/: CMakeLists.txt
vartests/blobtest/src/: blobtest.c
watchvar/: CMakeLists.txt
watchvar/src/: watchvar.c
